shrink app div to avoid gap for header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
 }
 
 .App {
+  top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
